--- a/BFSandDFS.ipynb
+++ b/BFSandDFS.ipynb
@@ -190,8 +190,503 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "4d18b8a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 5\n",
+      "00110\n",
+      "00011\n",
+      "11111\n",
+      "00000\n",
+      "[[0, 0, 1, 1, 0], [0, 0, 0, 1, 1], [1, 1, 1, 1, 1], [0, 0, 0, 0, 0]]\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# N, M을 공백을 기준으로 구분하여 입력 받기\n",
+    "n, m = map(int, input().split())\n",
+    "\n",
+    "# 2차원 리스트의 맵 정보 입력 받기\n",
+    "graph = []\n",
+    "for i in range(n):\n",
+    "    graph.append(list(map(int, input())))\n",
+    "print(graph)\n",
+    "\n",
+    "# DFS로 특정한 노드를 방문한 뒤에 연결된 모든 노드들도 방문\n",
+    "def dfs(x, y):\n",
+    "    # 주어진 범위를 벗어나는 경우에는 즉시 종료\n",
+    "    if x <= -1 or x >= n or y <= -1 or y >= m:\n",
+    "        return\n",
+    "    \n",
+    "    # 현재 노드를 아직 방문하지 않았다면\n",
+    "    if graph[x][y] == 0: \n",
+    "        # 해당 노드 방문 처리\n",
+    "        graph[x][y] = 1\n",
+    "        \n",
+    "        # 상, 하, 좌, 우의 위치들도 모두 재귀적으로 호출\n",
+    "        dfs(x - 1, y)\n",
+    "        dfs(x, y - 1)\n",
+    "        dfs(x + 1, y)\n",
+    "        dfs(x, y + 1)\n",
+    "        return True\n",
+    "    return\n",
+    "\n",
+    "# 모든 노드(위치)에 대하여 음료수 채우기\n",
+    "result = 0\n",
+    "for i in range(n):\n",
+    "    for j in range(m):\n",
+    "        # 현재 위치에서 DFS 수행\n",
+    "        if dfs(i, j) == True:\n",
+    "            result += 1\n",
+    "\n",
+    "print(result) # 정답 출력"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "91e79d82",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 3\n",
+      "110\n",
+      "110\n",
+      "011\n",
+      "(0, 0)\n",
+      "(1, 0)\n",
+      "(2, 0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# https://steadily-worked.tistory.com/495\n",
+    "from collections import deque\n",
+    "\n",
+    "# 6 10\n",
+    "# 0110000011\n",
+    "# 1101111101\n",
+    "# 1101010111\n",
+    "# 1111010111\n",
+    "# 0100111000\n",
+    "# 1011110111\n",
+    "\n",
+    "n,m = map(int,input().split())\n",
+    "graph = []\n",
+    "for i in range(n):\n",
+    "    graph.append(list(map(int,input())))\n",
+    "    \n",
+    "stack = [(0,0)]\n",
+    "visit = []\n",
+    "\n",
+    "def dfs():\n",
+    "    while stack :\n",
+    "        node = stack.pop()\n",
+    "        if graph[node[0]][node[1]] == 1 :\n",
+    "            visit.append(node)\n",
+    "            if node[0] < n-1 :\n",
+    "                stack.append(((node[0]+1),node[1]))\n",
+    "            elif node[1] < n-1:\n",
+    "                stack.append(((node[0]),node[1]+1))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "48809657",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(0, 0), (0, 1), (1, 0), (1, 1), (2, 1), (2, 2)}"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(visit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "a688d5c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 5 1\n",
+      "1 2\n",
+      "1 3\n",
+      "1 4\n",
+      "2 3\n",
+      "3 4\n",
+      "[[], [2, 3, 4], [1, 3], [1, 2, 4], [1, 3]]\n",
+      "[[False, False, False, False, False]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import  deque\n",
+    "\n",
+    "n, m, v = map(int, input().split())\n",
+    "graph = [[] for _ in range(n + 1)]\n",
+    "\n",
+    "for i in range(m):\n",
+    "    a, b = map(int, input().split())\n",
+    "    graph[a].append(b)\n",
+    "    graph[b].append(a)\n",
+    "    graph[a].sort()\n",
+    "    graph[b].sort()\n",
+    "print(graph)\n",
+    "\n",
+    "visited = [False] * (n + 1)\n",
+    "\n",
+    "def dfs(graph, v, visited):\n",
+    "    visited[v] = True\n",
+    "    print(v, end=' ')\n",
+    "    for i in graph[v]:\n",
+    "        if not visited[i]:\n",
+    "            dfs(graph, i, visited)\n",
+    "\n",
+    "def Bfs(graph, v, visited):\n",
+    "    visited = [False] * (n + 1)\n",
+    "    queue = deque([v])\n",
+    "    visited[v] = True\n",
+    "    while queue:\n",
+    "        pop = queue.popleft()\n",
+    "        print(pop, end=' ')\n",
+    "        for i in graph[pop]:\n",
+    "            if not visited[i]:\n",
+    "                queue.append(i)\n",
+    "                visited[i] = True\n",
+    "\n",
+    "# dfs(graph, v, visited)\n",
+    "# print()\n",
+    "# Bfs(graph, v, visited)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "e3e37a19",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 3\n",
+      "111\n",
+      "111\n",
+      "111\n",
+      "5\n",
+      "8\n",
+      "10\n",
+      "14\n",
+      "16\n",
+      "19\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "#아이스크림 문제\n",
+    "import sys\n",
+    "\n",
+    "n, m = map(int,input().split())\n",
+    "\n",
+    "graph = []\n",
+    "\n",
+    "for i in range(n):\n",
+    "    graph.append(list(map(int,input())))\n",
+    "\n",
+    "queue = [(0,0)]\n",
+    "count = 0 \n",
+    "x = 0\n",
+    "y = 0\n",
+    "result = 0\n",
+    "resultList = []\n",
+    "\n",
+    "def findRoot(): # 1인 애들  \n",
+    "    node = queue.pop(0)\n",
+    "    returnVal = 0\n",
+    "    global result\n",
+    "    global count\n",
+    "    flag = False\n",
+    "    result += 1\n",
+    "    \n",
+    "    if node[0] < n-1 :\n",
+    "        if graph[node[0]+1][node[1]]  == 1 :\n",
+    "            queue.append((node[0]+1,node[1]))\n",
+    "            x = node[0]\n",
+    "            y = node[1]+1\n",
+    "            findRoot()\n",
+    "            \n",
+    "    if node[1] < m-1 :\n",
+    "        if graph[node[0]][node[1]+1]  == 1 :\n",
+    "            queue.append((node[0],node[1]+1))\n",
+    "            x = node[0]\n",
+    "            y = node[1]+1\n",
+    "            findRoot()\n",
+    "            \n",
+    "    if node[0] == n-1 and node[1] == m-1:\n",
+    "        print(result)\n",
+    "        return result\n",
+    "            \n",
+    "print(findRoot())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "4937f696",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "pop from empty list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-119-6550ff4ff259>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfindRoot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-118-52af8fc73fe7>\u001b[0m in \u001b[0;36mfindRoot\u001b[0;34m()\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mfindRoot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m# 1인 애들\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m     \u001b[0mnode\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mqueue\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m     \u001b[0;32mglobal\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0;32mglobal\u001b[0m \u001b[0mcount\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: pop from empty list"
+     ]
+    }
+   ],
+   "source": [
+    "findRoot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "809b9eaa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 3\n",
+      "001\n",
+      "010\n",
+      "101\n",
+      "[[0, 0, 1], [0, 1, 0], [1, 0, 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n, m = map(int,input().split())\n",
+    "\n",
+    "graph = []\n",
+    "\n",
+    "for i in range(n):\n",
+    "    graph.append(list(map(int,input())))\n",
+    "    \n",
+    "print(graph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "dab64a8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "graph = [[0, 0, 1], [0, 1, 0], [1, 0, 1]]\n",
+    "visited = [[False] * n ]* m\n",
+    "visited\n",
+    "queue = []\n",
+    "for i in range(n):\n",
+    "    for j in range(m):\n",
+    "        print()\n",
+    "        dfs((n,m),visited)\n",
+    "        \n",
+    "def dfs(queue,(x,y),visited):\n",
+    "    node = queue.pop(0)\n",
+    "    x = node[0]\n",
+    "    y = node[1]\n",
+    "    visited[x][y] = True\n",
+    "    \n",
+    "    if x < n-1 :\n",
+    "        x+= 1\n",
+    "        if not visited[x][y]:\n",
+    "            queue.append((x,y))\n",
+    "            dfs(queue,(x,y),visited)\n",
+    "            \n",
+    "    if y < m-1 :\n",
+    "        y += 1\n",
+    "        if not visited[x][y]:\n",
+    "            queue.append((x,y))\n",
+    "            dfs(queue,(x,y),visited)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "588369de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sys import stdin\n",
+    "\n",
+    "n = int(input())\n",
+    "# 데이터 저장용 공간 matrix\n",
+    "matrix = [[0]*n for _ in range(n)]\n",
+    "# 방문 내역 저장용 visited\n",
+    "visited = [[0]*n for _ in range(n)]\n",
+    "\n",
+    "# matrix에 아파트 유무 0과 1 저장\n",
+    "for i in range(n):\n",
+    "    line = stdin.readline().strip()\n",
+    "    for j, b in enumerate(line):\n",
+    "        matrix[i][j] = int(b)\n",
+    "\n",
+    "# 방향 확인용 좌표 dx와 dy\n",
+    "# 중앙을 기준으로 좌/우/위/아래\n",
+    "dx = [-1, 1, 0, 0]\n",
+    "dy = [0, 0, 1, -1]\n",
+    "\n",
+    "# DFS 함수 정의\n",
+    "def dfs(x, y, c):\n",
+    "    visited[x][y] = 1   # 방문 여부 표시\n",
+    "    global nums            # 아파트 단지 수를 세기위한 변수\n",
+    "    # 아파트가 있으면 숫자를 세어줍니다.\n",
+    "    if matrix[x][y] == 1:\n",
+    "        #matrix[x][y] = c # 아파트 단지별 숫자 표시용\n",
+    "        nums += 1\n",
+    "    # 해당 위치에서 좌/우/위/아래 방향의 좌표를 확인해서 dfs 적용\n",
+    "    for i in range(4):\n",
+    "        nx = x + dx[i]\n",
+    "        ny = y + dy[i]\n",
+    "        if 0 <= nx < n and 0 <= ny < n:\n",
+    "            if visited[nx][ny] == 0 and matrix[nx][ny] == 1:\n",
+    "                dfs(nx,ny, c)\n",
+    "\n",
+    "cnt = 1 # 아파트 단지 세기 위한\n",
+    "numlist = [] # 아파트 단지별 숫자\n",
+    "nums=0 # 아파트 수\n",
+    "for a in range(n):\n",
+    "    for b in range(n):\n",
+    "        if matrix[a][b] == 1 and visited[a][b] == 0:\n",
+    "            dfs(a,b,cnt)\n",
+    "            numlist.append(nums)\n",
+    "            nums = 0\n",
+    "#            cnt += 1 # 아파트 단지 별 표시용\n",
+    "\n",
+    "print(len(numlist))\n",
+    "for n in sorted(numlist):\n",
+    "    print(n)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de75a500",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "7\n",
+    "0110100\n",
+    "0110101\n",
+    "1110101\n",
+    "0000111\n",
+    "0100000\n",
+    "0111110\n",
+    "0111000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "62236661",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "1010000\n",
+      "1010000\n",
+      "1010000\n",
+      "1010000\n",
+      "1010000\n",
+      "1010000\n",
+      "1010000\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "\n",
+    "matrix = []\n",
+    "visited = [[0]*n]*n\n",
+    "homeList = []\n",
+    "for i in range(n):\n",
+    "    matrix.append(list(map(int,input())))\n",
+    "\n",
+    "for i in range(n):\n",
+    "    for j in range(n):\n",
+    "        if matrix[i][j] == 1:\n",
+    "            dfs((i,j))\n",
+    "            \n",
+    "def dfs(homeCoor, visited, matrix):\n",
+    "    if visited[i][j] == True:\n",
+    "        return\n",
+    "    \n",
+    "    else : #1이면서 visit이전이면,\n",
+    "        visited[i][j] = True\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9aea5e3",
    "metadata": {},
    "outputs": [],
    "source": []
