--- a/Backtracking.ipynb
+++ b/Backtracking.ipynb
@@ -2,53 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "5b20f6ca",
+   "execution_count": null,
+   "id": "12a096ff",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-2-1de081e70056>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-1de081e70056>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    3 1\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "3 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "1789ee25",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4 1\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n"
-     ]
-    }
-   ],
-   "source": [
+    "#https://www.acmicpc.net/problem/15650\n",
     "n,m = map(int,input().split())\n",
     " \n",
     "s = []\n",
     " \n",
     "def dfs():\n",
-    "    if len(s)==m: #m개가 되면.\n",
+    "    if len(s)==m and s == sorted(s): #m개가 되면 \n",
     "        print(' '.join(map(str,s)))\n",
     "        return\n",
     "    \n",
     "    for i in range(1,n+1): #1부터~\n",
-    "        if i not in s: #1,2,3\n",
+    "        if i not in s : #1,2,3\n",
     "            s.append(i)\n",
     "            dfs()\n",
     "            s.pop()\n",
@@ -57,25 +27,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "8cae2154",
+   "execution_count": null,
+   "id": "d51c03f3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(1, 1), (1, 2), (1, 3)]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "n, m = map(int,input().split())\n",
+    "s = []\n",
+    "\n",
+    "def backTracking():\n",
+    "    if len(s) == m: #종료 조건\n",
+    "        if m == 1:\n",
+    "            print(\" \".join(map(str,s)))\n",
+    "            return\n",
+    "        else :\n",
+    "            count = 0\n",
+    "            for a in range(1,m+1):\n",
+    "                if s[a-1] <= s[a]:\n",
+    "                    count += 1\n",
+    "                else:\n",
+    "                    return\n",
+    "                if count == m-1:\n",
+    "                    print(\" \".join(map(str,s)))\n",
+    "                    return\n",
+    "    \n",
+    "    for i in range(1,n+1): #for 문\n",
+    "        s.append(i)\n",
+    "        backTracking() #조건확인\n",
+    "        s.pop()\n",
+    "            \n",
+    "backTracking()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2d6b820",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def backtracking(loc, ...): \n",
-    "    # 종료를 위한 조건문 \n",
-    "    if ...: \n",
+    "    \n",
+    "    if ...: # 종료를 위한 조건문 \n",
     "        return \n",
     "    \n",
     "    # 현재 위치 부터 for문 \n",
@@ -87,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2df035f7",
+   "id": "7435f582",
    "metadata": {
     "scrolled": true
    },
@@ -95,7 +88,6 @@
    "source": [
     "# https://www.acmicpc.net/problem/1182\n",
     "\n",
-    "import sys\n",
     "from itertools import combinations\n",
     "\n",
     "n, m = map(int, input().split())\n",
@@ -113,8 +105,87 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 112,
+   "id": "5023dbe0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "479306\n"
+     ]
+    }
+   ],
+   "source": [
+    "#https://www.acmicpc.net/problem/15650\n",
+    "n = int(input())\n",
+    "count = 0\n",
+    "s = []\n",
+    "\n",
+    "def dfs():\n",
+    "    global count\n",
+    "    \n",
+    "    if len(s)==n: \n",
+    "        count+=1\n",
+    "        return\n",
+    "    \n",
+    "    for i in range(n):\n",
+    "        if len(s) > 0:\n",
+    "            if i not in s and abs(s[len(s)-1]-i) != 1: #1,2,3\n",
+    "                s.append(i)\n",
+    "                dfs()\n",
+    "                s.pop()\n",
+    "        else:\n",
+    "            s.append(i)\n",
+    "            dfs()\n",
+    "            s.pop()\n",
+    "\n",
+    "dfs()\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "9a76cc27",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import permutations\n",
+    "\n",
+    "n = int(input())\n",
+    "nums = [i for i in range(n)]\n",
+    "permList = list(permutations(nums,n))\n",
+    "\n",
+    "count = 0\n",
+    "if n == 1:\n",
+    "    print(0)\n",
+    "else:\n",
+    "    for p in permList:\n",
+    "        for j in range(1,len(p)):\n",
+    "            if abs(p[j]-p[j-1]) == 1 :\n",
+    "                break\n",
+    "            if j == len(p)-1:\n",
+    "                count +=1\n",
+    "\n",
+    "    print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "125e00a7",
+   "id": "ec79b3f3",
    "metadata": {},
    "outputs": [],
    "source": []
