--- a/LG.ipynb
+++ b/LG.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "442f8bbd",
    "metadata": {},
    "outputs": [
@@ -10,30 +10,54 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['A', 'B', 'C', 'H', 'D', 'I', 'J', 'M', 'E', 'G', 'K', 'F', 'L']\n",
-      "['A', 'B', 'H', 'M', 'J', 'K', 'L', 'I', 'C', 'D', 'G', 'E', 'F']\n"
+      "4 5 1\n",
+      "1 2\n",
+      "1 3\n",
+      "1 4\n",
+      "2 4\n",
+      "3 4\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "4",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-15ca7aee281e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     54\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mvisit\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     55\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 56\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbfs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgraph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mst\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     57\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdfs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgraph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mst\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-5-15ca7aee281e>\u001b[0m in \u001b[0;36mbfs\u001b[0;34m(graph, start_node)\u001b[0m\n\u001b[1;32m     35\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mnode\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mvisit\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m             \u001b[0mvisit\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 37\u001b[0;31m             \u001b[0mqueue\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgraph\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnode\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     38\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mvisit\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 4"
      ]
     }
    ],
    "source": [
     "#bfs, dfs\n",
     "\n",
-    "graph = {\n",
-    "        'A': ['B'],\n",
-    "        'B': ['A', 'C', 'H'],\n",
-    "        'C': ['B', 'D'],\n",
-    "        'D': ['C', 'E', 'G'],\n",
-    "        'E': ['D', 'F'],\n",
-    "        'F': ['E'],\n",
-    "        'G': ['D'],\n",
-    "        'H': ['B', 'I', 'J', 'M'],\n",
-    "        'I': ['H'],\n",
-    "        'J': ['H', 'K'],\n",
-    "        'K': ['J', 'L'],\n",
-    "        'L': ['K'],\n",
-    "        'M': ['H']\n",
-    "    }\n",
+    "# graph = {\n",
+    "#         'A': ['B'],\n",
+    "#         'B': ['A', 'C', 'H'],\n",
+    "#         'C': ['B', 'D'],\n",
+    "#         'D': ['C', 'E', 'G'],\n",
+    "#         'E': ['D', 'F'],\n",
+    "#         'F': ['E'],\n",
+    "#         'G': ['D'],\n",
+    "#         'H': ['B', 'I', 'J', 'M'],\n",
+    "#         'I': ['H'],\n",
+    "#         'J': ['H', 'K'],\n",
+    "#         'K': ['J', 'L'],\n",
+    "#         'L': ['K'],\n",
+    "#         'M': ['H']\n",
+    "#     }\n",
     "\n",
+    "n,m,st = map(int,input().split())\n",
+    "\n",
+    "graph = {i : [] for i in range(1,n)}\n",
+    "\n",
+    "for i in range(m):\n",
+    "    inp = list(map(int,input().split()))\n",
+    "    graph[inp[0]].append(inp[1])\n",
+    "    \n",
     "\n",
     "def bfs(graph, start_node):\n",
     "    visit = list()\n",
@@ -60,19 +84,16 @@
     "        if node not in visit:\n",
     "            visit.append(node)\n",
     "            stack.extend(graph[node])\n",
-    "\n",
     "    return visit\n",
     "    \n",
-    "    print(bfs(graph, 'A'))\n",
-    "    print(dfs(graph, 'A'))"
+    "print(bfs(graph, st))\n",
+    "print(dfs(graph, st))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "b63f12a1",
+   "cell_type": "markdown",
+   "id": "38dc4530",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# 백트래킹"
    ]
@@ -93,7 +114,16 @@
    "id": "c8c852fa",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "4 5 1\n",
+    "1 2\n",
+    "1 3\n",
+    "1 4\n",
+    "2 4\n",
+    "3 4"
+   ]
   }
  ],
  "metadata": {
