--- a/BFSandDFS.ipynb
+++ b/BFSandDFS.ipynb
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "91e79d82",
+   "id": "8767d49c",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "48809657",
+   "id": "f4fd8992",
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "a688d5c5",
+   "id": "065d174a",
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "e3e37a19",
+   "id": "06d2b5a0",
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "4937f696",
+   "id": "a0b667dc",
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "809b9eaa",
+   "id": "01498853",
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "dab64a8c",
+   "id": "b20040a2",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "588369de",
+   "id": "838e92e7",
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de75a500",
+   "id": "d4bd0964",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,55 +641,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
-   "id": "62236661",
+   "execution_count": 205,
+   "id": "1eac5256",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# n = int(input())\n",
+    "\n",
+    "matrix = []\n",
+    "visited = [[0]*n]*n\n",
+    "homeList = []\n",
+    "count = 0\n",
+    "\n",
+    "# for i in range(n):\n",
+    "#     matrix.append(list(map(int,input())))\n",
+    "\n",
+    "matrix = [\n",
+    "    [1, 0, 1, 1, 1, 1, 1],\n",
+    "    [1, 0, 1, 0, 1, 1, 1],\n",
+    "    [1, 1, 1, 1, 1, 0, 1],\n",
+    "    [1, 1, 1, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 1, 0, 1, 1],\n",
+    "    [1, 1, 0, 1, 0, 1, 1],\n",
+    "    [0, 0, 0, 0, 1, 1, 1]\n",
+    "]\n",
+    "\n",
+    "def dfs(homeCoor, visited, matrix):\n",
+    "    global count\n",
+    "    \n",
+    "    i = homeCoor[0]\n",
+    "    j = homeCoor[1]\n",
+    "    \n",
+    "    if visited[i][j] == True or matrix[i][j] == 0:\n",
+    "        return\n",
+    "   \n",
+    "    elif visited[i][j] == False or matrix[i][j] == 1 : #1이면서 visit이전이면,\n",
+    "        visited[i][j] = True\n",
+    "        matrix[i][j] = count\n",
+    "        if i < n-1 :\n",
+    "            dfs((i+1,j),visited,matrix)\n",
+    "        if i > 0 :\n",
+    "            dfs((i-1,j),visited,matrix)\n",
+    "        if j < n-1: \n",
+    "            dfs((i,j+1),visited,matrix)\n",
+    "        if j > 0 : \n",
+    "            dfs((i,j-1),visited,matrix)\n",
+    "        return\n",
+    "    \n",
+    "for i in range(n):\n",
+    "    for j in range(n):\n",
+    "        if visited[i][j] == False and matrix[i][j] == 1:\n",
+    "            count += 1\n",
+    "            dfs((i,j),visited,matrix)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "id": "494dae19",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7\n",
-      "1010000\n",
-      "1010000\n",
-      "1010000\n",
-      "1010000\n",
-      "1010000\n",
-      "1010000\n",
-      "1010000\n"
+      "[1, 0, 2, 2, 2, 2, 2]\n",
+      "[1, 0, 1, 0, 1, 1, 1]\n",
+      "[1, 3, 1, 1, 1, 0, 1]\n",
+      "[1, 1, 1, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 1, 0, 1, 1]\n",
+      "[1, 1, 0, 1, 0, 1, 1]\n",
+      "[0, 0, 0, 0, 1, 1, 1]\n"
      ]
     }
    ],
    "source": [
-    "n = int(input())\n",
-    "\n",
-    "matrix = []\n",
-    "visited = [[0]*n]*n\n",
-    "homeList = []\n",
-    "for i in range(n):\n",
-    "    matrix.append(list(map(int,input())))\n",
-    "\n",
-    "for i in range(n):\n",
-    "    for j in range(n):\n",
-    "        if matrix[i][j] == 1:\n",
-    "            dfs((i,j))\n",
-    "            \n",
-    "def dfs(homeCoor, visited, matrix):\n",
-    "    if visited[i][j] == True:\n",
-    "        return\n",
-    "    \n",
-    "    else : #1이면서 visit이전이면,\n",
-    "        visited[i][j] = True\n",
-    "        \n"
+    "for i in matrix:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "id": "ec3030b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[True, True, True, True, True, True, True],\n",
+       " [True, True, True, True, True, True, True],\n",
+       " [True, True, True, True, True, True, True],\n",
+       " [True, True, True, True, True, True, True],\n",
+       " [True, True, True, True, True, True, True],\n",
+       " [True, True, True, True, True, True, True],\n",
+       " [True, True, True, True, True, True, True]]"
+      ]
+     },
+     "execution_count": 207,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "visited"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9aea5e3",
+   "id": "70d488be",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sys import stdin\n",
+    "n = int(input())\n",
+    "# 데이터 저장용 공간 matrix\n",
+    "matrix = [[0]*n for _ in range(n)]\n",
+    "# 방문 내역 저장용 visited\n",
+    "visited = [[0]*n for _ in range(n)]\n",
+    "\n",
+    "# matrix에 아파트 유무 0과 1 저장\n",
+    "for i in range(n):\n",
+    "    line = stdin.readline().strip()\n",
+    "    for j, b in enumerate(line):\n",
+    "        matrix[i][j] = int(b)\n",
+    "\n",
+    "# 방향 확인용 좌표 dx와 dy\n",
+    "# 중앙을 기준으로 좌/우/위/아래\n",
+    "dx = [-1, 1, 0, 0]\n",
+    "dy = [0, 0, 1, -1]\n",
+    "\n",
+    "# DFS 함수 정의\n",
+    "def dfs(x, y, c): #1인 애들만 들어오는구나.\n",
+    "    \n",
+    "    visited[x][y] = 1   # 방문 여부 표시\n",
+    "    global nums            # 아파트 단지 수를 세기위한 변수\n",
+    "    # 아파트가 있으면 숫자를 세어줍니다.\n",
+    "    if matrix[x][y] == 1:\n",
+    "        #matrix[x][y] = c # 아파트 단지별 숫자 표시용\n",
+    "        nums += 1\n",
+    "    # 해당 위치에서 좌/우/위/아래 방향의 좌표를 확인해서 dfs 적용\n",
+    "    for i in range(4):\n",
+    "        nx = x + dx[i]\n",
+    "        ny = y + dy[i]\n",
+    "        if 0 <= nx < n and 0 <= ny < n:\n",
+    "            if visited[nx][ny] == 0 and matrix[nx][ny] == 1:\n",
+    "                dfs(nx,ny, c)\n",
+    "\n",
+    "cnt = 1 # 아파트 단지 세기 위한\n",
+    "numlist = [] # 아파트 단지별 숫자\n",
+    "nums=0 # 아파트 수\n",
+    "\n",
+    "for a in range(n):\n",
+    "    for b in range(n):\n",
+    "        if matrix[a][b] == 1 and visited[a][b] == 0:\n",
+    "            dfs(a,b,cnt)\n",
+    "            numlist.append(nums)\n",
+    "            nums = 0\n",
+    "#            cnt += 1 # 아파트 단지 별 표시용\n",
+    "\n",
+    "print(len(numlist))\n",
+    "for n in sorted(numlist):\n",
+    "    print(n)"
+   ]
   }
  ],
  "metadata": {
