--- a/BFSandDFS.ipynb
+++ b/BFSandDFS.ipynb
@@ -806,6 +806,375 @@
     "for n in sorted(numlist):\n",
     "    print(n)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44ac83ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "4 5 1\n",
+    "1 2\n",
+    "1 3\n",
+    "1 4\n",
+    "2 4\n",
+    "3 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "661b28f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 5 3\n",
+      "5 4\n",
+      "5 2\n",
+      "1 2\n",
+      "3 4\n",
+      "3 1\n",
+      "3 1 2 5 4\n",
+      "3 1 4 2 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "n,m,s = map(int,input().split())\n",
+    "graph = {i : [] for i in range(1,n+1)}\n",
+    "\n",
+    "for _ in range(m):\n",
+    "    n1,n2 = map(int,input().split())\n",
+    "    graph[n1].append(n2)\n",
+    "    graph[n2].append(n1)\n",
+    "    \n",
+    "    \n",
+    "visited = [False]*(n+1)\n",
+    "visit = []\n",
+    "queue = deque([s])\n",
+    "stack = [s]\n",
+    "\n",
+    "for g in range(1,len(graph)):\n",
+    "    graph[g] = sorted(graph[g])\n",
+    "\n",
+    "\n",
+    "\n",
+    "def dfs(node):\n",
+    "    visit.append(node)\n",
+    "    visited[node] = True\n",
+    "    for i in graph[node]:\n",
+    "        if visited[i] == False:\n",
+    "            dfs(i)\n",
+    "dfs(s)        \n",
+    "for i in range(len(visit)):\n",
+    "    visit[i] = str(visit[i])\n",
+    "    \n",
+    "print(\" \".join(visit))\n",
+    "\n",
+    "def bfs(n):\n",
+    "    visited[n] = True\n",
+    "    queue = deque([n])\n",
+    "    while queue:\n",
+    "        v = queue.popleft()\n",
+    "        visit.append(v)\n",
+    "        for i in graph[v]:\n",
+    "            if not visited[i]:\n",
+    "                queue.append(i)\n",
+    "                visited[i] = True\n",
+    "\n",
+    "visited = [False]*(n+1)\n",
+    "visit = []\n",
+    "bfs(s)\n",
+    "# print(visit)\n",
+    "for i in range(len(visit)):\n",
+    "    visit[i] = str(visit[i])\n",
+    "    \n",
+    "print(\" \".join(visit))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "550957fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: [2, 3], 2: [1, 5], 3: [1, 4], 4: [3, 5], 5: [4, 2]}"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "4079d912",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "queue = [1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "579485c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(queue.pop(0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "a7c9ccaa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "visit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "87483f06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bfs(n):\n",
+    "    visited[n] = True\n",
+    "    queue = deque([n])\n",
+    "    while queue:\n",
+    "        v = queue.popleft()\n",
+    "        print(v, end= ' ')\n",
+    "        for i in graph[v]:\n",
+    "            if not visited[i]:\n",
+    "                queue.append(i)\n",
+    "                visited[i] = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "c71a555e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: [2, 3], 2: [1, 5], 3: [1, 4], 4: [3, 5], 5: [4, 2]}"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "b3271e54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visited = [False,False,False,False,False,False]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "437c8aa4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "4 6\n",
+    "101111\n",
+    "101010\n",
+    "101011\n",
+    "111011"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "2df14c8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 6\n",
+      "101111\n",
+      "101010\n",
+      "101011\n",
+      "111011\n",
+      "now : (0, 0)\n",
+      "I am x :  -1\n",
+      "I am y :  0\n",
+      "I am matrix[x][y] 1\n",
+      "I am x :  1\n",
+      "I am y :  0\n",
+      "I am matrix[x][y] 1\n",
+      "I am x :  0\n",
+      "I am y :  -1\n",
+      "I am matrix[x][y] 1\n",
+      "I am x :  0\n",
+      "I am y :  1\n",
+      "I am matrix[x][y] 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "n,m = map(int,input().split())\n",
+    "matrix = []\n",
+    "for i in range(n):\n",
+    "    matrix.append(list(map(int,input())))\n",
+    "visited = [[False]*m]*n\n",
+    "dx = [-1,1,0,0] #상, 하, 좌, 우\n",
+    "dy = [0,0,-1,1]\n",
+    "root = []\n",
+    "stack\n",
+    "\n",
+    "def dfs(i,j):\n",
+    "    print(\"now :\", (i,j))\n",
+    "    visited[i][j] = True\n",
+    "    root.append((i,j))\n",
+    "    \n",
+    "    for c in range(4):\n",
+    "        x = i + dx[c]\n",
+    "        y = j + dy[c]\n",
+    "        print(\"I am x : \",x)\n",
+    "        print(\"I am y : \",y)\n",
+    "        print(\"I am matrix[x][y]\", matrix[x][y])\n",
+    "        if matrix[x][y] == 1 and visited[i][j] == False:\n",
+    "            if 0 <= x <= n and 0 <= y <= m :\n",
+    "                print('I am called')\n",
+    "                dfs(x,y)\n",
+    "\n",
+    "dfs(0,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "4cb7b917",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 0)]"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de51471e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 6\n",
+      "111111\n",
+      "111111\n",
+      "111111\n",
+      "111111\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "from collections import deque\n",
+    "\n",
+    "N, M = map(int, input().split()) # 배열크기 NXM\n",
+    "\n",
+    "board = [] # 배열\n",
+    "\n",
+    "#배열 입력\n",
+    "for _ in range(N) :\n",
+    "    board.append(list(map(int,input())))\n",
+    "\n",
+    "#상하좌우\n",
+    "dx = [-1,1,0,0]\n",
+    "dy = [0,0,-1,1]\n",
+    "\n",
+    "queue = deque([(0,0)]) #시작 좌표\n",
+    "\n",
+    "#BFS 시작\n",
+    "while queue :\n",
+    "    coor = queue.popleft()\n",
+    "    x = coor[0]\n",
+    "    y = coor[1]\n",
+    "\n",
+    "    for i in range(4) :\n",
+    "        nx = x + dx[i]\n",
+    "        ny = y + dy[i]\n",
+    "\n",
+    "        if nx>=0 and ny>=0 and nx<N and ny<M :\n",
+    "            if board[nx][ny] == 1 :\n",
+    "                queue.append((nx,ny))\n",
+    "                board[nx][ny] = board[x][y] + 1\n",
+    "                root.append((nx,ny))\n",
+    "\n",
+    "print(root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e12f3d64",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
