--- a/Backtracking.ipynb
+++ b/Backtracking.ipynb
@@ -21,7 +21,7 @@
     "        if i not in s : #1,2,3\n",
     "            s.append(i)\n",
     "            dfs()\n",
-    "            s.pop()\n",
+    "            s.pop() #return 되면 여기!\n",
     "dfs()"
    ]
   },
@@ -40,6 +40,7 @@
     "        if m == 1:\n",
     "            print(\" \".join(map(str,s)))\n",
     "            return\n",
+    "        \n",
     "        else :\n",
     "            count = 0\n",
     "            for a in range(1,m+1):\n",
@@ -184,11 +185,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ec79b3f3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "graph = [\n",
+    "    [1,0,1,1,1,1],\n",
+    "    [1,0,1,0,1,0],\n",
+    "    [1,0,1,0,1,1],\n",
+    "    [1,1,1,0,1,1]\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3983ee26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def findRoot():\n",
+    "    if x == n and y == m:\n",
+    "        return\n",
+    "    \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
