--- a/coding_test/fashion haebin.ipynb
+++ b/coding_test/fashion haebin.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "9b09cf1d",
    "metadata": {},
    "outputs": [
@@ -46,14 +46,54 @@
     "        cloth = inp.split()[0]\n",
     "        category = inp.split()[1]\n",
     "        try :\n",
-    "            fashion[category].append(cloth)\n",
+    "            fashion[category] += 1\n",
     "        except :\n",
-    "            fashion[category] = [cloth]\n",
-    "    \n",
+    "            fashion[category] = 1\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7b2e5ff4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'headgear': 2, 'eyewear': 1}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fashion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "241bad26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "    result = 1\n",
     "    for f in fashion:\n",
     "        result *= (len(fashion[f]) + 1)\n",
     "    print(result - 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ab13b86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "category = 0?"
    ]
   }
  ],
